--- a/pages/pk/findSomeOne/findSomeOne.wxml
+++ b/pages/pk/findSomeOne/findSomeOne.wxml
@@ -1,25 +1,26 @@
-<view class="css {{findUsers.length>0?'b-49':'b-white'}}" style="min-height:100vh">
+<view class="css {{findUsers.length>0?'b-49':'b-white'}}" style="min-height:100vh;background-position: center;background-image: url({{backUrl1}});background-repeat: no-repeat;background-size: 100% 100%;">
+    <view style="height:{{top+42}}px"></view>
 
 
-
-    <view class="css z3">
-            <view style="height:10vh"></view>
-            <swiper wx:if="{{findUsers.length > 0}}" style="height:80vh" indicator-dots="true" autoplay="true" circular="true" >
+    <view class="css">
+        
+            <!-- <swiper wx:if="{{findUsers.length > 0}}" style="height:80vh" indicator-dots="true" autoplay="true" circular="true" >
                 <block wx:for="{{findUsers}}" wx:for-index="bindex" wx:for-item="findUser" wx:key="findKey">
                     <swiper-item  >
  
                         <view class="csc" style="height:80vh">
-        
+          
                             <view class="css">
                                 <view class="css pl-5vw pr-5vw ">
+
                                     <view class="css b-white br-20 ">
 
-                                        <view class="rbc p-3vw b-line" >
+                                        <view class="rbc pl-3vw pr-3vw pb-30 pt-30 b-line" >
                                                 <view class="rcc" >
                                                     
                                                                 <view class="rcc">
-                                                                    <view class="rcc pr-10 pt-20 pb-20">
-                                                                        <image class="rcc w-60 h-60 br-60 " src="{{findUser.user.imgUrl}}" mode="aspectFill"></image>
+                                                                    <view class="rcc pr-10">
+                                                                        <image class="rcc w-50 h-50 br-50 " src="{{findUser.user.imgUrl}}" mode="aspectFill"></image>
                                                                     </view>
                                                                 </view> 
                                                     
@@ -28,20 +29,19 @@
                                                 
                                                 <view class="cas" style="flex:1">
                                                     <view class="css"> 
-                                                        <view class="rus line-1-start fs-30 fw-700 c-4" >{{findUser.user.userName}}</view>
+                                                        <view class="rus line-1-start fs-30 fw-700" >{{findUser.user.userName}}</view>
                                                     </view>
                                                 </view>
                                             
                                                 <navigator  class="rcc " hover-class="none" url="/pages/pk/userCard/userCard?userId={{findUser.user.userId}}">
                                                     <view class="rcc">
                                                         <view class="rcc">
-                                                            <image class="w-40 h-40" mode="aspectFit" src="/images/hiscard.png"></image>
+                                                            <image class="w-40 h-40" mode="aspectFit" src="/images/card.png"></image>
                                                         </view>
-                                                        <view class="w-5"></view>
-                                                        <view class="fs-25 fw-300 c-4">名片</view>
+                                                        <view class="w-10"></view>
+                                                        <view class="fs-25 fw-700 c-4">2.4k</view>
                                                     </view>
                                                 
-                                                    <image class="w-30 h-30" mode="aspectFit" src="/images/more.png"></image>
                                                 </navigator>    
 
                                         </view>
@@ -50,7 +50,7 @@
                                         <view class="css pl-3vw pr-3vw" style="height:70vw">
                                             <view class="csc pl-3vw pr-3vw" style="flex:1">
                                                 <view class="rcc">
-                                                    <view class="rus fs-30 fw-700 c-4 line-5-center">{{findUser.text}}</view>
+                                                    <view class="rus fs-30 fw-400 c-4 line-5-center">{{findUser.text}}</view>
                                                 </view>
 
                                             </view>
@@ -114,23 +114,136 @@
 
 
                                     </view>
+
                                 </view>
     
                     
                             </view> 
-
+                  
                         </view>
 
 
 
                     </swiper-item>
                 </block>
-            </swiper>
-            <view wx:else class="ccc" style="height:80vh">
+            </swiper>  -->
+            <view wx:if="{{findUsers.length > 0}}" class="css">
+                <block wx:for="{{findUsers}}" wx:for-index="bindex" wx:for-item="findUser" wx:key="findKey">
+                    <view class="h-50"></view>
+                    <view class="css pl-5vw pr-5vw ">
+
+                                    <view class="css b-white br-20 ">
+
+                                        <view class="rbc pl-3vw pr-3vw pb-30 pt-30 b-line" >
+                                                <view class="rcc" >
+                                                    
+                                                                <view class="rcc">
+                                                                    <view class="rcc pr-10">
+                                                                        <image class="rcc w-50 h-50 br-50 " src="{{findUser.user.imgUrl}}" mode="aspectFill"></image>
+                                                                    </view>
+                                                                </view> 
+                                                    
+                                                
+                                                </view>
+                                                
+                                                <view class="cas" style="flex:1">
+                                                    <view class="css"> 
+                                                        <view class="rus line-1-start fs-30 fw-700" >{{findUser.user.userName}}</view>
+                                                    </view>
+                                                </view>
+                                            
+                                                <navigator  class="rcc " hover-class="none" url="/pages/pk/userCard/userCard?userId={{findUser.user.userId}}">
+                                                    <view class="rcc">
+                                                        <view class="rcc">
+                                                            <image class="w-40 h-40" mode="aspectFit" src="/images/hiscard.png"></image>
+                                                        </view>
+                                                        <!-- <view class="w-10"></view> -->
+                                                        <!-- <view class="fs-25 fw-700 c-4">2.4k</view> -->
+                                                    </view>
+                                                
+                                                </navigator>    
+
+                                        </view>
+
+
+                                        <view class="css pl-3vw pr-3vw" >
+                                            <view class="css pt-30 pb-30">
+                                                <!-- <view class="rus"> -->
+                                                    <view class="rus fs-30 fw-400 line-5-start">{{findUser.text}}</view>
+                                                <!-- </view> -->
+
+                                            </view>
+                                            <view class="css">
+                                                <view class="rbc">
+                                                    <view class="rcc b-48 br-10" style="width:27.5vw;height:23vw">
+                                                        <image wx:if="{{findUser.img1}}" class="br-10" style="width:27.5vw;height:23vw" mode="aspectFill" src="{{findUser.img1}}"></image>
+                                                        <image wx:else style="width:23vw;height:23vw" mode="aspectFit" src="{{emptyImage}}"></image>
+                                                    </view>
+                                                    <view class="rcc b-48 br-10" style="width:27.5vw;height:23vw">
+                                                        <image wx:if="{{findUser.img2}}" class="br-10" style="width:27.5vw;height:23vw" mode="aspectFill" src="{{findUser.img2}}"></image>
+                                                        <image wx:else style="width:23vw;height:23vw" mode="aspectFit" src="{{emptyImage}}"></image>                                                </view>
+                                                    <view class="rcc b-48 br-10" style="width:27.5vw;height:23vw">
+                                                        <image wx:if="{{findUser.img3}}" class="br-10" style="width:27.5vw;height:23vw" mode="aspectFill" src="{{findUser.img3}}"></image>
+                                                        <image wx:else style="width:23vw;height:23vw" mode="aspectFit" src="{{emptyImage}}"></image>                                                </view>
+                                                </view>
+                                            </view>
+                        
+
+                                        </view>
+                                        
+
+
+                                        <view class="css p-3vw">
+                            
+                                            <view class="rbc pt-20 pb-20">
+                                                
+                                                <view class="ccc p-10 fs-28 fw-300 c-4" style="flex:1">
+                                                    <view class="fs-23 fw-300 c-4">已打捞</view>
+                                                    <view class="fs-25 fw-700 c-4">{{findUser.timeExpire}}</view>
+                                                </view>
+                                                <view class="w-5 l-line" style="height:3vw"></view>    
+                                                <view class="ccc p-10 fs-28 fw-300 c-4" style="flex:1">
+                                                    <view class="fs-23 fw-300 c-4">总打捞时间</view>
+                                                    <view class="fs-25 fw-700 c-4">{{findUser.findLength}}天</view>
+                                                </view>
+                                            </view>
+                                
+
+                                        </view>
+
+                                        <view class="css pl-3vw pr-3vw ">
+                                        <view class="rss">
+                                                <view class="rcc">
+                                                    <image class="rcc w-40 h-40 br-40" mode="aspectFit" src="/images/locate.png" ></image>
+                                                </view>
+                                                <view class="w-10"></view>
+                                                
+                                                <view class="cas " style="flex:1">
+                                                    <view class="rus line-1-start fs-25 fw-400 c-4">{{findUser.pkName}}</view>
+                                                </view>
+                                        </view>
+                                        <view class="h-3vw"></view>
+                                        </view>
+
+
+
+
+
+
+
+
+                                    </view>
+
+                    </view>
+                                
+                </block>
+                <view class="h-300"></view>
+            </view>
+            <view wx:else class="ccc" style="height:100vh">
                 <image class="rcc w-400 h-400" src="{{emptyUrl}}" mode="aspectFit"></image>
                 <view class="rcc fs-30 fw-300 c-3">此处暂无打捞信息</view>
             </view>
-            <view style="height:10vh"></view>
+   
 
 
     </view>
@@ -144,7 +257,7 @@
 
 </view>
 <!-- //头部 -->
-<view class="css b-line customCenterBar z3" >
+<view class="css b-line customCenterBar z3 {{findUsers.length>0?'b-49':'b-white'}}" >
         <view class="rcs " style="height:{{top}}px"></view>
         <view class="rbc" style="height:32px">
             <view class="rcs" style="flex:1">
@@ -200,9 +313,9 @@
 </view>
 <view class="ccc uploadButton">
   <view class="rcc  p-20">
-    <view class="rcc fs-25 fw-300 c-3">遇见不撩</view>
+    <view class="rcc fs-25 fw-300">遇见不撩</view>
     <image class="w-35 h-35 pl-10 pr-10" mode="aspectFit" src="/images/shank.png"></image>
-    <view class="rcc fs-25 fw-300 c-3">卡点互捞</view>
+    <view class="rcc fs-25 fw-300">卡点互捞</view>
   </view>
   
 
